gray/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: recommend-dr
spec:
  host: recommend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
